<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.likfe.udacity.udacityandroid.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button0"
        style="@style/CommonBut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_t1"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/CommonBut"
        android:text="@string/main_t2"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_t3"
        style="@style/CommonBut"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_t4"
        style="@style/CommonBut"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_t5"
        style="@style/CommonBut"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_t6"
        style="@style/CommonBut"
        />
</LinearLayout>
